# inflink-rs

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  GEMINI.md  README.md  biome.json  index.js  manifest.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  standard-version-toml-updater.mjs  tsconfig.json
.changeset/: afraid-birds-open.md  all-knives-fly.md  brave-houses-design.md  cold-onions-brush.md  config.json  cozy-suits-agree.md  dark-parks-smell.md  empty-seas-repeat.md  fifty-tips-trade.md  fine-memes-open.md  four-tables-read.md  fresh-baths-warn.md  fuzzy-keys-pay.md  hungry-turkeys-scream.md  large-carrots-greet.md  large-suns-work.md  nice-colts-jam.md  orange-dragons-take.md  pink-feet-make.md  puny-snails-search.md  ripe-onions-worry.md  shy-points-lay.md  silver-rings-agree.md  small-tables-warn.md  sour-doors-scream.md  spotty-seals-thank.md  swift-pumas-chew.md  tall-shoes-arrive.md  tangy-carrots-flash.md  tasty-garlics-wonder.md  tough-wasps-admire.md  true-webs-scream.md  upset-bats-lay.md  whole-stars-knock.md
.github/workflows/: ci.yml  codeql.yml  publish-store.yml  release.yml
InfinityLink/: .gitignore  CHANGELOG.md  index.js  manifest.json  manifest.v2.json  manifest.v3.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
InfinityLink/src/: errors.ts  hooks.ts  index.tsx  keys.ts  provider.ts  utils.ts
InfinityLink/src/Receivers/: smtc-frontend.ts  smtc-rust.ts
InfinityLink/src/SongInfoProviders/: BaseProvider.ts  ReactStoreProvider.ts
InfinityLink/src/types/: api.d.ts  betterncm.d.ts  errors.ts  global.d.ts  index.d.ts  ncm-internal.d.ts  ncm.d.ts  smtc.d.ts
InfinityLink/src/utils/: cover.ts  dom.ts  event.ts  index.ts  logger.ts  playModeLogic.ts  throttle.ts  webpack.ts
InfinityLink/src/utils/ncm/: app.ts  app_win32.ts  capabilities.ts  musiclibrary.ts  os.ts  os_win32.ts  process.call.ts  update.ts  winhelper_win32.ts
InfinityLink/src/versions/: adapter.d.ts  playModeController.ts  provider.ts
cef-bindings/: Cargo.toml  build.rs
cef-bindings/src/: base.rs  lib.rs  string.rs  sys.rs  task.rs  v8.rs  value.rs
cef-safe/: Cargo.toml
cef-safe/cef-sys/: Cargo.toml  build.rs  wrapper.h
cef-safe/src/: base.rs  lib.rs  string.rs  task.rs  v8.rs
docs/: inflink-api.md
scripts/: build.ts  extract-changelog.ts  sync-versions.js  sync-versions.mjs  sync-versions.ts
smtc_handler/: Cargo.toml  build.rs
smtc_handler/src/: discord.rs  ffi.rs  lib.rs  logger.rs  main.rs  model.rs  smtc_core.rs
(+6 files in other folders)
