[package]
name = "smtc_handler"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
env_logger = "0.11.8"
log = "0.4.27"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.62", features = ["Media_Playback", "Storage_Streams"] }
cef-bindings = { path = "../cef-bindings" }
